Trying to fix flickering when loading theme and refreshing.

--- a/css/site.css
+++ b/css/site.css
@@ -77,3 +77,7 @@ label {
         padding-bottom: 10px;
     }
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
